# Target

./: CMakeLists.txt  README.md
include/: GameState.hpp  PlayState.hpp  StateManager.hpp  resourceholder.hpp
src/: PlayState.cpp  StateManager.cpp  main.cpp
